Fix spacing of select boxes in edit property

--- a/web/war/src/main/webapp/less/detail/dropdown.less
+++ b/web/war/src/main/webapp/less/detail/dropdown.less
@@ -247,11 +247,14 @@ input {
 
 select {
   width: 100%;
-  margin-bottom: 1em;
   font-size: 90%;
 }
 
 .input-row select {
   margin-bottom: 0;
+}
+
+select, .input-row-select select {
+  margin-bottom: 1em;
 }
 
