--- a/web/war/src/main/webapp/less/detail/properties.less
+++ b/web/war/src/main/webapp/less/detail/properties.less
@@ -22,7 +22,7 @@
         font-size: 100%;
       }
     }
-    &.expanded > tr:last-child td {
+    &.expanded > tr:last-child > td {
       padding-bottom: 1em;
     }
     &.collapsed {      
